[package]
name = "xll_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xladd-derive = "^0.9"
xladd = { git = "https://github.com/ronniec95/xladd", features = ["use_ndarray"] }
log = "*" # Needed from 0.4.* onwards to give tracing

[lib]
crate-type = ["cdylib"]
